--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       name="twitter:description"
       content="Siyasro Advertising provides creative and professional advertising services in Sri Lanka."
     />
-    <meta name="twitter:image" content="https://siyasroadvertising.com/logo.jpeg" />
+    <meta name="twitter:image" content="https://siyasroadvertising.com/og-image.jpg" />
 
     <!-- Canonical -->
     <link rel="canonical" href="https://siyasroadvertising.com/" />
