--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./src/assets/logo.png" />
+
+    <!-- Favicon & App Icons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Siyasro Advertising" />
+    <link rel="manifest" href="/site.webmanifest" />
 
     <!-- Viewport for mobile responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,13 +21,19 @@
       name="description"
       content="Siyasro Advertising provides professional and creative advertising solutions in Sri Lanka, including branding, signage, printing, and digital marketing."
     />
-    <meta name="keywords" content="Siyasro Advertising, advertising Sri Lanka, branding, printing, signage, creative design, marketing" />
+    <meta
+      name="keywords"
+      content="Siyasro Advertising, advertising Sri Lanka, branding, printing, signage, creative design, marketing"
+    />
     <meta name="author" content="Siyasro Advertising" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://siyasroadvertising.com/" />
-    <meta property="og:title" content="Siyasro Advertising | Creative Advertising Solutions in Sri Lanka" />
+    <meta
+      property="og:title"
+      content="Siyasro Advertising | Creative Advertising Solutions in Sri Lanka"
+    />
     <meta
       property="og:description"
       content="Discover Siyasro Advertising, your trusted partner for branding, printing, signage, and digital marketing solutions in Sri Lanka."
@@ -29,7 +43,10 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://siyasroadvertising.com/" />
-    <meta name="twitter:title" content="Siyasro Advertising | Creative Advertising Solutions in Sri Lanka" />
+    <meta
+      name="twitter:title"
+      content="Siyasro Advertising | Creative Advertising Solutions in Sri Lanka"
+    />
     <meta
       name="twitter:description"
       content="Siyasro Advertising provides creative and professional advertising services in Sri Lanka."
@@ -38,6 +55,22 @@
 
     <!-- Canonical -->
     <link rel="canonical" href="https://siyasroadvertising.com/" />
+
+    <!-- Organization Logo Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Siyasro Advertising",
+        "url": "https://siyasroadvertising.com",
+        "logo": "https://siyasroadvertising.com/favicon-96x96.png",
+        "sameAs": [
+          "https://www.facebook.com/yourpage",
+          "https://www.instagram.com/yourpage",
+          "https://www.linkedin.com/company/yourpage"
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
